整理component文件编写规范

--- a/src/components/modal/style.scss
+++ b/src/components/modal/style.scss
@@ -16,7 +16,36 @@
   padding: 0;
 
   &.animation{
-    animation: bounceInDown .7s;
+    animation: bounceInDown .6s;
+  }
+
+  &.modal-alert{
+    animation: animate-fadein-center .3s;
+    border-radius: 10px;
+
+    .modal-header{
+      border-bottom: none;
+      .modal-title{
+        text-align: center;
+        padding: 0
+      }
+    }
+    .modal-footer{
+      height: 40px;
+      .footer-panel{
+        position: relative;
+        top: 0;
+        left: 0;
+        height: 100%;
+
+        .btn{
+          border: none;
+          border-radius: 0 0 10px 10px;
+          height: 100%;
+          color: $blue;
+        }
+      }
+    }
   }
   //transition: bottom .3s, right .3s,left .3s, width .3s, height .3s;
 
@@ -55,11 +84,14 @@
   .modal-header{
     padding: 0;
     position: relative;
+    border-bottom: 1px solid #e5e5e5;
     .modal-title{
       height: 40px;
       line-height: 40px;
       font-size: 14px;
       padding-left: 15px;
+      font-weight: bold;
+      font-size: 14px;
 
       &.text-center{
         padding-left: 0;
@@ -85,6 +117,7 @@
 
   .modal-body {
     overflow: auto;
+    padding: 8px 10px;
   }
 
   .modal-footer{
@@ -92,6 +125,7 @@
     text-align: left;
     padding: 0;
     height: 50px;
+    border-top: 1px solid #e5e5e5;
 
     &::after{
       content: "";
@@ -120,31 +154,16 @@
 }
 
 @keyframes bounceInDown {
-  0%,60%,75%,90%,to {
-    -webkit-animation-timing-function: cubic-bezier(.215,.61,.355,1);
-    animation-timing-function: cubic-bezier(.215,.61,.355,1)
-  }
-
   0% {
     opacity: 0;
     -webkit-transform: translate3d(0,-3000px,0);
     transform: translate3d(0,-3000px,0)
   }
 
-  60% {
-    opacity: 1;
-    -webkit-transform: translate3d(0,25px,0);
-    transform: translate3d(0,25px,0)
-  }
-
-  75% {
-    -webkit-transform: translate3d(0,-10px,0);
-    transform: translate3d(0,-10px,0)
-  }
-
   90% {
-    -webkit-transform: translate3d(0,5px,0);
-    transform: translate3d(0,5px,0)
+    opacity: 1;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0)
   }
 
   to {
