--- a/src/components/style/basic/color.scss
+++ b/src/components/style/basic/color.scss
@@ -1,2 +1,24 @@
-$blue: #337ab7;
+$link: #337ab7;
+
+$link-hover: #40a9ff;
+
+$link-active: #096dd9;
+
+$disabled: rgba(0,0,0,0.25);
+
+$primary: #2d8cf0;
+
+$info: #2db7f5;
+
+$success: #19be6b;
+
+$warn: #faad14;
+
+$error: #ed4014;
+
+$text: #515a6e;
+
+$title: rgba(0,0,0,0.85);
+
+$default: #dcdee2;
 
