--- a/src/components/style/basic/basic.scss
+++ b/src/components/style/basic/basic.scss
@@ -1,11 +1,179 @@
-.hide{
-  display: none!important;
+$base-font-size: 14px;
+$base-font-color: $text;
+
+input::-ms-clear,
+input::-ms-reveal {
+  display: none;
 }
 
-*{
-  box-sizing: border-box!important;
+*,
+*::before,
+*::after {
+  box-sizing: border-box; // 1
 }
 
-body * {
-  font-size: 14px;
+html {
+  font-family: sans-serif; // 2
+  line-height: 1.15; // 3
+  -webkit-text-size-adjust: 100%; // 4
+  -ms-text-size-adjust: 100%; // 4
+  -ms-overflow-style: scrollbar; // 5
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // 6
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  color: $base-font-color;
+  font-size: $base-font-size;
+}
+
+[tabindex='-1']:focus {
+  outline: none !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+  color: $title;
+  font-weight: 500;
+}
+
+article,
+aside,
+dialog,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
+  display: block;
+}
+
+ol,
+ul,
+dl {
+  margin-top: 0;
+  margin-bottom: 1em;
+}
+
+ol, ul{
+  padding: 0;
+  list-style: none;
+}
+
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
+}
+
+dt {
+  font-weight: 500;
+}
+
+dd {
+  margin-bottom: 0.5em;
+  margin-left: 0; // Undo browser default
+}
+
+img {
+  vertical-align: middle;
+  border-style: none; // remove the border on images inside links in IE 10-.
+}
+
+a,
+area,
+button,
+[role='button'],
+input:not([type='range']),
+label,
+select,
+summary,
+textarea {
+  touch-action: manipulation;
+}
+
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0; // remove the margin in Firefox and Safari
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
+}
+
+button,
+input {
+  overflow: visible; // Show the overflow in Edge
+}
+
+button,
+select {
+  text-transform: none; // remove the inheritance of text transform in Firefox
+}
+
+button,
+html [type="button"], // 1
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; // 2
+}
+
+[hidden], .hide {
+  display: none !important;
+}
+
+a {
+  color: $text;
+  background-color: transparent; // remove the gray background on active links in IE 10.
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  transition: color 0.3s;
+  -webkit-text-decoration-skip: objects; // remove gaps in links underline in iOS 8+ and Safari 8+.
+
+  &:focus {
+    text-decoration: underline;
+    text-decoration-skip: ink;
+  }
+
+  &:hover {
+    color: $link-hover;
+    text-decoration: none;
+  }
+
+  &:active {
+    color: $link-active;
+    text-decoration: none;
+  }
+
+  &:active,
+  &:hover {
+    outline: 0;
+  }
+
+  &[disabled] {
+    color: $disabled;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+}
+
+.disabled, [disabled], [disabled] *, .disabled *{
+  pointer-events: none;
+  cursor: not-allowed;
+  color: $disabled;
 }
